fix pinned blueprint showing grade < 1 for invited state at start